# sqlite3-extras

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  extras.cpp  libsqlite3pcre.pro  main.cpp  reutil.cpp  sqlite3-reutil.pro  wrapper.h
src/: dynamics.rs  lib.rs  macros.rs
src/virtual_table/: internals.rs  mod.rs  range.rs
tests/: integration_generate_series.rs  integration_virtual_table_range.rs
