[package]
name = "sqlite3-extras"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]

[dependencies]
libc = "*"
const-cstr = "^0.1"
nodrop = "*"
smallvec = "*"
lazy_static = "*"

[lib]
crate-type = ["dylib"]

[build-dependencies]
bindgen = "^0.32"

[dev-dependencies]
glob = "*"
rusqlite = {version= "0.13.0", features=["load_extension", "bundled"]}